2025-04-19  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-org.el (howm-view-title-skip-regexp):
	fix unhelpful summary lines in titleless org notes
	thx > @Claudisimo san
	https://github.com/kaorahi/howm/issues/68

2025-04-13  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-misc.el (howm-auto-theme):
	fix missing org mode faces
	thx > Mark Butala san (@butala),
	Jabir Ali Ouassou san (jabir.ali.ouassou at hvl.no)
	https://github.com/kaorahi/howm/issues/66

2025-04-13  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-vars.el (howm-view-open-by-myself):
	fix unintentional external viewer for *.org in Gentoo Linux
	thx > Alexis Praga san (@apraga)
	https://github.com/kaorahi/howm/issues/64

2025-04-08  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-org.el (howm-dtime-format):
	fix wrong faces for the lines below a goto link
	thx > Jack Baty san (@jackbaty)
	https://github.com/kaorahi/howm/issues/62

2025-04-05  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-org.el (howm-view-summary-mode-hook):
	support org font-lock in summary buffer
	thx > @rhstanton san
	https://github.com/kaorahi/howm/issues/29

2025-04-05  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-view.el (howm-view-dired-goto):
	fix potential infinite loop in howm-view-dired-goto
	thx > @masmarius san
	https://github.com/kaorahi/howm/issues/60

2025-03-23  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* configure.ac: version 1.5.4

2025-03-13  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-lang-en.el (howm-menu-legend-en):
	add colors to menu legend
	thx > Mark Butala san (@butala), Sukhovskii san (@Emacs101)
	https://github.com/kaorahi/howm/issues/57

	* howm-lang-fr.el (howm-menu-legend-fr): ditto.

	* howm-lang-ja.el (howm-menu-legend-ja): ditto.

2025-03-02  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

       * iigrep.el (iigrep-exclude):
       fix: exclude backup files from hit count
       thx > Sukhovskii san (@Emacs101)
       https://github.com/kaorahi/howm/issues/55
